--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Event handler discord bot",
   "author": "Matej Bošnjak",
-  "repository": "https://github.com/mbos2/nixi-bot",
+  "repository": "https://github.com/mbos2/nixi",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
